--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
+# Genaral
+spring.application.name=DockerSpringServer
 
 # Logging
 logging.level.org.springframework=INFO
 logging.level.se.rtinnovation=DEBUG
+
+# Metrics
+management.endpoints.web.exposure.include=health,info,prometheus
+metrics.tags.application=${spring.application.name}
