--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # Genaral
 spring.application.name=DockerSpringServer
 
+# REST service
+server.port=8080
+
 # Logging
 logging.level.org.springframework=INFO
 logging.level.se.rtinnovation=DEBUG
